[package]
name = "cli"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "wein"
path = "src/main.rs"

[dependencies]
parser = { path = "../parser" }
html = { path = "../html" }
toml = "1.0.6"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
